--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="index.css" />
   <link rel="shortcut icon" href="./images/logo copy.png" type="image/x-icon">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>YinLiu-front-end developer </title>
+  <title>YinLiu-Front-end Developer </title>
 </head>
 
 <body>
