--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div>
           <p>A curiosity-driven Front-End Developer with design chops.✨</p>
           <p>I’m passionate about bringing both the technical and visual aspects of digital products to life. User
-            experience, beautiful pixels 🎨 and writing clean accessible, human code matters to me. I sweat the details.
+            experience, beautiful pixels 🎨 and writing clean accessible, human code matter to me. I sweat the details.
           </p>
 
         </div>
