--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
         <h3>Let’s Build Something <span>Together<div class="line"></div></span>
           </h3>
         <p>Feel free to reach out if you’re looking for a developer, have a question, or just want to connect.</p>
-      <p >343948394834@qq.com</p>
+      <p >Lynn6186127@gmail.com</p>
       </div>
       <div>
         <img src="/images/together.png" alt="">
