remove icone and links

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <link rel="stylesheet" href="index.css" />
-  <link rel="shortcut icon" href="./images/logo copy.png" type="image/x-icon">
+  <link rel="shortcut icon" href="./images/logo copy.ico" type="image/x-icon">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>YinLiu-Front-end Developer </title>
 </head>
@@ -18,12 +18,12 @@
   </section>
   <section class="bio">
     <div class="layout-wrap">
-      <div class="icon-group">
+      <!-- <div class="icon-group">
         <div class="icon-line"></div>
         <img src="./images/linkedin.png" alt="" />
         <img src="./images/github.png" alt="" />
         <img src="./images/email.png" alt="" />
-      </div>
+      </div> -->
       <h1 class="name">Hi, I’m Lynn liu |
         <span>Web Developer <div class="line"></div></span>
         <span>Graduate Student <div class="line"></div></span>
@@ -239,9 +239,9 @@
   <footer>
     <div class="layout-wrap">
     <span><img src="./images/logo.png" alt=""></span>
-    <span>Github</span>
+    <!-- <span>Github</span>
     <span>Linkedin</span>
-    <span>CV Download</span>
+    <span>CV Download</span> -->
 </div>
   </footer>
 </body>
