--- a/index.html
+++ b/index.html
@@ -142,11 +142,11 @@
             <div class="project-btn">
 
               <a href="./casestudy/Hair Salon_compressed.pdf" target="_blank"><span>case study >
-                  <!-- <div></div> -->
                 </span>
               </a>
-
-              <!-- <img src="./images/Icon awesome-github@2x.png" alt=""> -->
+              <a href="https://salon.lynn.yoobeestudent.net/" target="_blank"><span>Live Site >
+              </span>
+            </a>
             </div>
 
           </div>
@@ -229,7 +229,7 @@
       <p >Lynn6186127@gmail.com </p>
       </div>
       <div>
-        <img src="/images/together.png" alt="">
+        <img src="./images/together.png" alt="">
       </div>
       
     </div>
@@ -239,9 +239,9 @@
   <footer>
     <div class="layout-wrap">
     <span><img src="./images/logo.png" alt=""></span>
-    <!-- <span>Github</span>
-    <span>Linkedin</span>
-    <span>CV Download</span> -->
+    <span> <a href="https://github.com/Lynn61Liu" target="_blank">Github</a> </span>
+    <span><a href="https://www.linkedin.com/in/yin-liu-5a44b4219" target="_blank">Linkedin</a></span>
+    <span><a href="#" > CV Download</span>
 </div>
   </footer>
 </body>
