add download cv

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             Innovation 🇳🇿, a BE in Network Engineering from Wuhan Institute of Technology 🇨🇳 with a solid foundation
             in computer science. And Certified Software Engineer from FiberHome Telecommunication Technologies Co., Ltd
             🇨🇳 </p>
-          <p><a href="#">
+          <p><a href="./casestudy/YinLIU--Resume-0274451032.pdf" target="_blank">
             👉 Reading my RESUME and CV  </a></p>
 
         </div>
