--- a/index.html
+++ b/index.html
@@ -24,25 +24,22 @@
         <img src="./images/github.png" alt="" />
         <img src="./images/email.png" alt="" />
       </div> -->
-      <h1 class="name">Hi, I’m Lynn liu |
+      <h1 class="name">Hi, I’m Lynn LIU |
+        <span>Graduate <div class="line"></div></span>
         <span>Web Developer <div class="line"></div></span>
-        <span>Graduate Student <div class="line"></div></span>
-
+      
       </h1>
 
       <div class="mybio">
         <div>
           <p>A curiosity-driven Front-End Developer with design chops.✨</p>
           <p>I’m passionate about bringing both the technical and visual aspects of digital products to life. User
-            experience, beautiful pixels 🎨 and writing clean accessible, human code matter to me. I sweat the details.
+            experience, beautiful pixels 🎨 and writing clean accessible, easy-to-read codes matter the most to me. I sweat the details.
           </p>
 
         </div>
         <div>
-          <p>As I’ve grown as a developer, I have a Diploma in Web and UX Design from Yoobee College of Creative
-            Innovation 🇳🇿, a BE in Network Engineering from Wuhan Institute of Technology 🇨🇳 with a solid foundation
-            in computer science. And Certified Software Engineer from FiberHome Telecommunication Technologies Co., Ltd
-            🇨🇳 </p>
+          <p>As I’ve grown as a developer, I have a Diploma in Web and UX Design from Yoobee College of Creative Innovation 🇳🇿, a BE in Network Engineering from Wuhan Institute of Technology 🇨🇳,  which lays a solid foundation in computer science. Besides that, I am a Certified Software Engineer, issued by FiberHome Telecommunication Technologies Co., Ltd 🇨🇳.</p>
           <p><a href="./casestudy/YinLIU--Resume-0274451032.pdf" target="_blank">
             👉 Reading my RESUME and CV  </a></p>
 
@@ -55,10 +52,7 @@
       <div class="subtitle">
         <h3>My <span> Skills<div class="line"></div></span></h3>
         <p>
-          Through my studies, I’ve gained a solid understanding of computer
-          science and web development concepts, and have dedicated a lot of my
-          free time to apply these concepts to real-world scenarios and
-          applications.
+          Through my studies and work experiences, I’ve demonstrated a solid understanding of computer science and web development concepts, and have dedicated a lot of my free time to apply these concepts to real-world scenarios and applications.
         </p>
       </div>
 
@@ -83,8 +77,8 @@
         <h3>What I’ve been <span>working on <div class="line"></div></span>
         </h3>
         <p>
-          Through my studies, I’ve gained a solid understanding of computer
-          science and web development concepts, and have dedicated a lot of fun.
+          What I’ve been working on
+I have worked and completed several big projects by integrating what I have learned from computer science and web development; I enjoyed every single second of it.
         </p>
       </div>
 
@@ -106,8 +100,7 @@
               <button calss="stack-item">SASS </button>
 
             </div>
-            <div class="project-des">this app enables users to post wildlife photographs and receives feedback from
-              community members. posts can be commented on by other users. can update or deleted by the owner. </div>
+            <div class="project-des">The MVP was very bare-bones,but it worked.This app allows users to post photographs of wildlives online and they can also receive comments and feedbacks from like-minded community members. In addition, users also have the freedome to delete their own posted photos if they would like to. </div>
             <div class="project-btn">
               <a href="./casestudy/ZIP_compressed.pdf" target="_blank"><span>case study >
                   <!-- <div></div> -->
@@ -137,8 +130,7 @@
 
 
             </div>
-            <div class="project-des">Developed a WordPress theme for a hair salon service provider, the site is
-              functional in all major browsers, viewports and operating systems. </div>
+            <div class="project-des">Developed a WordPress theme for a hair salon service provider; The site is functional in all major browsers, viewports, and operating systems. </div>
             <div class="project-btn">
 
               <a href="./casestudy/Hair Salon_compressed.pdf" target="_blank"><span>case study >
@@ -167,9 +159,7 @@
 
 
             </div>
-            <div class="project-des">A single page web application based on a specially designed site inputting
-              information and being shown accommodation options and related details based on the number of people in
-              their party and the length of time they intend to be staying.
+            <div class="project-des">A single-page web application based on a specially designed site, allowing users to input information and show accommodation options and related details based on the number of people in their party and the length of time they intend to stay.
             </div>
             <div class="project-btn">
               <a href="./casestudy/HomeTrip Booking App_compressed.pdf" target="_blank"><span>case study >
@@ -197,11 +187,7 @@
               <button calss="stack-item">User Experience Design</button> </button>
         
             </div>
-            <div class="project-des">User Experience Planning and 
-              Design for Action-Based Environmental Protection Educational 
-              Applications.The goals of the APP are to increase public 
-              awareness of their cause, provide a welcoming call to action 
-              to join the ECO organisation, and maintain engagement of existing members. 
+            <div class="project-des">User Experience Planning and Design for Action-Based Environmental Protection Educational Applications.The goals of the APP are to increase public awareness of protecting the environment, invite more people to join the ECO organisation, and engage with existing members. 
               </div>
               <div class="project-btn">
                   <a href="./casestudy/Tiny Eco Kiwis_compressed.pdf" target="_blank" ><span>case study  >
