--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ I have worked and completed several big projects by integrating what I have lear
               <button calss="stack-item">Mongo DB</button>
               <button calss="stack-item">React Hooks</button>
               <button calss="stack-item">SASS </button>
-
+              <button calss="stack-item">Cookies </button>
             </div>
             <div class="project-des">The MVP was very bare-bones,but it worked.This app allows users to post photographs of wildlives online and they can also receive comments and feedbacks from like-minded community members. In addition, users also have the freedome to delete their own posted photos if they would like to. </div>
             <div class="project-btn">
