--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <img src="./images/email.png" alt="" />
       </div> -->
       <h1 class="name">Hi, I’m Lynn LIU |
-        <span>Graduate <div class="line"></div></span>
+        <!-- <span>Graduate <div class="line"></div></span> -->
         <span>Web Developer <div class="line"></div></span>
       
       </h1>
