change nutriplays link

--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
               nutritional value. Kids can also play a hands-on game where they create their own lunchboxes,
               experimenting with balanced meals while learning about healthy eating.</div>
             <div class="project-btn">
-              <a href="" target="_blank"><span>case study >
+              <a href="./NutriPlays/RainbowMeals.html" target="_blank"><span>Live Site >
                   <!-- <div></div> -->
                 </span>
               </a>
