CHANGE THE link of project

--- a/index.html
+++ b/index.html
@@ -240,13 +240,17 @@
               <button calss="stack-item">TypeScript </button>
               <button calss="stack-item">Tailwind CSS</button> </button>
               <button calss="stack-item">Express</button> </button>
+               <button calss="stack-item">Jira</button> </button>
+               <button calss="stack-item">Agile</button> </button>
+                 <button calss="stack-item">Figma</button> </button>
+
 
             </div>
             <div class="project-des">A refrigerator inventory management system that tracks ingredients, generates
               AI-based meal plans, compares supermarket prices, recommends recipes, and creates shopping lists.
             </div>
             <div class="project-btn">
-              <a href="./casestudy/Tiny Eco Kiwis_compressed.pdf" target="_blank"><span>case study >
+              <a href="./casestudy/Marvelous_Moose_Seminar.pdf" target="_blank"><span>case study >
                   <!-- <div></div> -->
                 </span>
               </a>
