--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <li>Node.js & Express</li>
         <li>Python & Flask</li>
         <li>SQL & MongoDB</li>
-       
+
         <li>RESTful APIs</li>
         <li>AWS Cloud Deployment</li>
         <li>Agile & Scrum</li>
@@ -101,7 +101,9 @@
         <h3>What I’ve been <span>working on <div class="line"></div></span>
         </h3>
         <p>
-          I’ve built and completed several impactful projects, combining my computer science knowledge with full-stack web development. Each project has been a rewarding challenge, letting me apply my skills creatively and deliver real-world solutions.
+          I’ve built and completed several impactful projects, combining my computer science knowledge with full-stack
+          web development. Each project has been a rewarding challenge, letting me apply my skills creatively and
+          deliver real-world solutions.
         </p>
       </div>
 
@@ -240,9 +242,9 @@
               <button calss="stack-item">TypeScript </button>
               <button calss="stack-item">Tailwind CSS</button> </button>
               <button calss="stack-item">Express</button> </button>
-               <button calss="stack-item">Jira</button> </button>
-               <button calss="stack-item">Agile</button> </button>
-                 <button calss="stack-item">Figma</button> </button>
+              <button calss="stack-item">Jira</button> </button>
+              <button calss="stack-item">Agile</button> </button>
+              <button calss="stack-item">Figma</button> </button>
 
 
             </div>
@@ -300,7 +302,15 @@
         <h3>Let’s Build Something <span>Together<div class="line"></div></span>
         </h3>
         <p>Feel free to reach out if you’re looking for a developer, have a question, or just want to connect.</p>
-        <p>Lynn6186127@gmail.com </p>
+        <p>
+          <a href="mailto:yilu747@aucklanduni.ac.nz" class="email-button">
+            📧 yilu747@aucklanduni.ac.nz
+          </a>
+
+        </p>
+        <p>
+           <a href="tel:+6491234567" class="email-button">📞 (+64) 027 445 1032</a>
+        </p>
       </div>
       <div>
         <img src="./images/together.png" alt="">
