--- a/index.html
+++ b/index.html
@@ -125,9 +125,7 @@
               <button calss="stack-item">SASS </button>
               <button calss="stack-item">Cookies </button>
             </div>
-            <div class="project-des">The MVP was very bare-bones,but it worked.This app allows users to post photographs
-              of wildlives online and they can also receive comments and feedbacks from like-minded community members.
-              In addition, users also have the freedome to delete their own posted photos if they would like to. </div>
+            <div class="project-des">Developed a full-stack web application where users can register, upload, and share wildlife photos. Other users can comment and interact with posts, creating a community-driven experience. Admin users have full control to manage all content. This project demonstrates user authentication, content management, and real-time interaction, showcasing both front-end and back-end development skills. </div>
             <div class="project-btn">
               <a href="./casestudy/ZIP_compressed.pdf" target="_blank"><span>case study >
                   <!-- <div></div> -->
@@ -157,15 +155,13 @@
 
 
             </div>
-            <div class="project-des">Developed a WordPress theme for a hair salon service provider; The site is
-              functional in all major browsers, viewports, and operating systems. </div>
+            <div class="project-des">Developed a custom WordPress website for a hair salon service provider, allowing the client to easily manage and update content through a CMS. The site is fully functional across all major browsers, screen sizes, and operating systems, ensuring a seamless user experience. This project highlights custom theme development and user-friendly content management, giving the client full control over website updates without requiring technical knowledge. </div>
             <div class="project-btn">
 
               <a href="./casestudy/Hair Salon_compressed.pdf" target="_blank"><span>case study >
                 </span>
               </a>
-              <a href="https://salon.lynn.yoobeestudent.net/" target="_blank"><span>Live Site >
-                </span>
+              
               </a>
             </div>
 
